# player-board

./: .gitignore  pyproject.toml  requirements.txt
src/: crud.py  database.py  main.py  models.py
src/crud/: game.py  player.py  session.py
src/models/: game.py  gameowner.py  player.py  session.py
src/routers/: games.py  players.py  session.py  sessions.py
tests/: conftest.py  test_games.py  test_main.py  test_players.py
